--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -10,3 +10,6 @@
 - link:
     ~/.vim: vim
     ~/.vimrc: vimrc
+    ~/.config/i3/config: i3
+    ~/.gitconfig: gitconfig
+    ~/.Xresources: Xresources
