Add polybar config
* Polybar depends on colors defined in Xresources to centralise theming

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -14,5 +14,6 @@
     ~/.config/fontconfig/fonts.conf:
       create: true
       path: fonts.conf
+    ~/.config/polybar: polybar
     ~/.gitconfig: gitconfig
     ~/.Xresources: Xresources
