--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -10,6 +10,7 @@
 - link:
     ~/.vim: vim
     ~/.vimrc: vimrc
+    ~/.config/nvim/init.vim: vimrc
     ~/.config/i3/config: i3
     ~/.config/fontconfig/fonts.conf:
       create: true
