--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "vim/bundle/jedi-vim"]
 	path = vim/bundle/jedi-vim
 	url = https://github.com/davidhalter/jedi-vim
+[submodule "wallpapers"]
+	path = wallpapers
+	url = https://gitlab.com/charafau/lnxpcs
