Add vimx and alias to vim for system clipboard support

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -36,7 +36,7 @@
             maim
             python3-pip
             util-linux-user
-            vim
+            vim-x11
             yarn
             zsh"
         stdin: true
