--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -40,6 +40,7 @@
             util-linux-user # for chsh
             vim-X11 # vim distribution with x11 clipboard access
             w3m-img # image preview for ranger
+            xclip # clipboard access for screenshots
             yarn
             zsh"
         stdin: true
